--- a/src/canvas/canvas.html
+++ b/src/canvas/canvas.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <canvas id='canvas'>nightcrawler</canvas>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
